@@ -59,11 +59,12 @@ public class KuromojiTokenizerFactory extends BaseTokenizerFactory implements Re
   
   private static final String USER_DICT_ENCODING = "user-dictionary-encoding";
 
-  private Segmenter segmenter;
+  private UserDictionary userDictionary;
+  private Mode mode;
   
   @Override
   public void inform(ResourceLoader loader) {
-    Mode mode = getMode(args);
+    mode = getMode(args);
     String userDictionaryPath = args.get(USER_DICT_PATH);
     try {
       if (userDictionaryPath != null) {
@@ -76,9 +77,9 @@ public class KuromojiTokenizerFactory extends BaseTokenizerFactory implements Re
             .onMalformedInput(CodingErrorAction.REPORT)
             .onUnmappableCharacter(CodingErrorAction.REPORT);
         Reader reader = new InputStreamReader(stream, decoder);
-        this.segmenter = new Segmenter(new UserDictionary(reader), mode);
+        userDictionary = new UserDictionary(reader);
       } else {
-        this.segmenter = new Segmenter(mode);
+        userDictionary = null;
       }
     } catch (Exception e) {
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, e);
@@ -87,7 +88,7 @@ public class KuromojiTokenizerFactory extends BaseTokenizerFactory implements Re
   
   @Override
   public Tokenizer create(Reader input) {
-    return new KuromojiTokenizer(segmenter, input);
+    return new KuromojiTokenizer(new Segmenter(userDictionary, mode), input);
   }
   
   private Mode getMode(Map<String, String> args) {
